@@ -90,6 +90,8 @@
         converted some fields in web admin GUI configuration
           from text to textarea
         removed start/stop symlinks from RPM
+        fixed httpd restart and tainted mode issues
+          (http://www.packetfence.org/mantis/view.php?id=599)
 
 1.8.0
         unify log management
